[gd_scene load_steps=5 format=3 uid="uid://cf7unlcnoi8tk"]

[ext_resource type="Script" path="res://Assets/Player/Weapons/ice_spear_projectile.gd" id="1_o8o3l"]
[ext_resource type="Texture2D" uid="uid://b0dquvtrhdxsg" path="res://Assets/Tutorial/Items/Weapons/ice_spear.png" id="2_byrlv"]
[ext_resource type="PackedScene" uid="uid://nrvwm1v463l" path="res://Assets/Utility/DamageBoxes/damage_box.tscn" id="3_gh3xt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pl172"]
size = Vector2(7.77818, 35.3553)

[node name="IceSpearProjectile" type="Area2D" groups=["attack"]]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_o8o3l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.750001, -0.749999)
shape = SubResource("RectangleShape2D_pl172")

[node name="Sprite2D" type="Sprite2D" parent="CollisionShape2D"]
texture_filter = 1
position = Vector2(-1.06066, -1.2517e-06)
rotation = 0.785398
texture = ExtResource("2_byrlv")

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true
autostart = true

[node name="DamageBox" parent="." instance=ExtResource("3_gh3xt")]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
